# auth-service

./: .env.sample  Dockerfile  LICENSE copy  README.md  alembic.ini  docker-compose.dev.yml  docker-compose.yml  nginx.yml  pyproject.toml  requirements.txt  run.sh  setup.cfg
.github/workflows/: deploy-auth.yml
alembic/: env.py
alembic/versions/: 17ca2422ca29_name.py  52f8fcb55b4d_rename1.py  5e48fb9d97cc_rename2.py  63565fe3f2e4_initial.py  9f14f83640d9_test.py
app/: create_superuser.py  main.py
app/api/v1/: api.py  auth.py
app/api/v1/endpoints/: auth.py  role.py  user.py
app/auth/: auth_helpers.py  encryption_facade.py  encryption_repository.py  encryption_strategy.py  init.py  role_helpers.py  role_repository.py  token_repository.py  token_strategy.py  user_repository.py
app/core/: config.py
app/exceptions/: exceptions.py
app/infrastructure/db/: database.py
app/models/: users.py
app/schemas/: role.py  user.py
auth-admin/: Dockerfile
auth-admin/app/: pyproject.toml  run.sh
auth-admin/app/app/: app.py
auth-admin/app/app/forms/: signup.py
auth-admin/app/app/templates/: login.html  login_history.html  signup.html
auth-admin/app/infrastructure/db/: database.py
auth-service/app/: README.md  pyproject.toml  run.sh
auth-service/app/app/: main.py
auth-service/app/app/auth/: auth_helpers.py  encryption_facade.py  encryption_repository.py  encryption_strategy.py  init.py  login_history_repository.py  role_helpers.py  (+4 more)
auth-service/app/migration/: env.py
migration/versions/: 3e4ce8799f22_initial.py  db11aa0eebc0_create_roles_table.py
(+18 files in other folders)
