[tool.poetry]
name = "auth-admin"
version = "0.1.0"
description = "user auth admin"
authors = ["Denis Shvetsov <den.shvetsov@yandex.ru>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
flake8 = "^6.1.0"
black = "^23.12.1"
isort = "^5.13.2"
python-dotenv = "^1.0.0"
alembic = "^1.13.1"
psycopg2 = "^2.9.9"
pydantic-settings = "^2.2.1"
flask-admin = "^1.6.1"
flask = "^3.0.2"
gunicorn = "^21.2.0"
flask-wtf = "^1.2.1"
requests = "^2.31.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
